--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>ParkEase — Smart Parking Solution</title>
-    <meta name="description" content="ParkEase is the smartest way to find and book parking spots near you. Real-time availability, secure payments, and seamless navigation." />
-    <meta name="keywords" content="parking, smart parking, book parking, find parking, car park, parking app, ParkEase, real-time parking" />
-    <meta property="og:title" content="ParkEase — Smart Parking Solution" />
+    <title>VoidPark — Smart Parking Solution</title>
+    <meta name="description" content="VoidPark is the smartest way to find and book parking spots near you. Real-time availability, secure payments, and seamless navigation." />
+    <meta name="keywords" content="parking, smart parking, book parking, find parking, car park, parking app, VoidPark, real-time parking" />
+    <meta property="og:title" content="VoidPark — Smart Parking Solution" />
     <meta property="og:description" content="Find and book parking spots near you instantly. Real-time availability, secure payments, and seamless navigation." />
     <meta property="og:image" content="/assets/hero.png" />
     <meta property="og:type" content="website" />
